Implements front-end and back-end interaction, reading and writing of local JSON web data files, rapid script packaging, and reading of custom configuration files

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check build-only",
+    "build-all": "run-p type-check build-only && go build -o .\\dist\\ .\\GoTool\\serve.go",
+    "build-go": "go build -o .\\dist\\ .\\GoTool\\serve.go",
+    "build-web": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
     "build-only": "vite build",
