--- a/package.json
+++ b/package.json
@@ -17,22 +17,29 @@
     "@tiptap/extension-bold": "^2.0.0-beta.209",
     "@tiptap/extension-bullet-list": "^2.0.0-beta.209",
     "@tiptap/extension-code": "^2.0.0-beta.209",
+    "@tiptap/extension-hard-break": "^2.0.0-beta.209",
     "@tiptap/extension-heading": "^2.0.0-beta.209",
+    "@tiptap/extension-history": "^2.0.0-beta.209",
     "@tiptap/extension-image": "^2.0.0-beta.209",
     "@tiptap/extension-italic": "^2.0.0-beta.209",
     "@tiptap/extension-link": "^2.0.0-beta.209",
     "@tiptap/extension-list-item": "^2.0.0-beta.209",
+    "@tiptap/extension-strike": "^2.0.0-beta.209",
     "@tiptap/extension-subscript": "^2.0.0-beta.209",
     "@tiptap/extension-superscript": "^2.0.0-beta.209",
+    "@tiptap/extension-table": "^2.0.0-beta.209",
+    "@tiptap/extension-table-cell": "^2.0.0-beta.209",
+    "@tiptap/extension-table-header": "^2.0.0-beta.209",
+    "@tiptap/extension-table-row": "^2.0.0-beta.209",
     "@tiptap/extension-underline": "^2.0.0-beta.209",
     "@tiptap/html": "^2.0.0-beta.209",
-    "@tiptap/vue-3": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
+    "@tiptap/vue-3": "^2.0.0-beta.209",
     "@vueuse/core": "^9.8.2",
+    "bulma": "^0.9.4",
     "sass": "^1.57.1",
-    "bulma": "^0.9.4"
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
