--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/extension-bold": "^2.0.0-beta.209",
     "@tiptap/extension-bullet-list": "^2.0.0-beta.209",
     "@tiptap/extension-code": "^2.0.0-beta.209",
+    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.209",
     "@tiptap/extension-hard-break": "^2.0.0-beta.209",
     "@tiptap/extension-heading": "^2.0.0-beta.209",
     "@tiptap/extension-history": "^2.0.0-beta.209",
@@ -37,6 +38,7 @@
     "@tiptap/vue-3": "^2.0.0-beta.209",
     "@vueuse/core": "^9.8.2",
     "bulma": "^0.9.4",
+    "lowlight": "^2.8.0",
     "sass": "^1.57.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
