--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build-all": "run-p type-check build-only && go build -o .\\dist\\ -ldflags=\"-w -s\" .\\GoTool\\serve.go",
-    "build-go": "go build -o .\\dist\\ -ldflags=\"-w -s\" .\\GoTool\\serve.go",
+    "build-all": "run-p type-check build-only && go build -o .\\dist\\ -ldflags=\"-w -s\" .\\BackEnd\\serve.go",
+    "build-go": "go build -o .\\dist\\ -ldflags=\"-w -s\" .\\BackEnd\\serve.go",
     "build-web": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
@@ -32,6 +32,7 @@
     "@tiptap/extension-table-cell": "^2.0.0-beta.209",
     "@tiptap/extension-table-header": "^2.0.0-beta.209",
     "@tiptap/extension-table-row": "^2.0.0-beta.209",
+    "@tiptap/extension-text-align": "^2.0.0-beta.209",
     "@tiptap/extension-underline": "^2.0.0-beta.209",
     "@tiptap/html": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
