--- a/BackEnd/config.json
+++ b/BackEnd/config.json
@@ -1,18 +1,17 @@
 {
 	// Directory containing the page to be modified (e.g. "D:\\github\\web\\src\\pages")
-	"ScanDirectory": "D:\\github\\web",
+	"ScanDirectory": "..\\",
 
-	// Directory to store the edited page (e.g. "D:\\github\\web\\src\\iGEMGotoolData")
-	"StoreDirectory": "..\\iGEMGotoolData",
+	// Directory to store the edited page (e.g. "D:\\github\\web\\src\\WikiData")
+	"StoreDirectory": ".\\WikiData",
 
 	//Port to be used (e.g. "8080" or "auto")
 	"Port": "auto",
 
-	//the tag to be scan and incert content (e.g. "iGEMGotool"),
-	//which be automatically converted to <!-- iGEMGotool {{name}} start-->
-	"incert tag":"iGEMGotool",
-
+	//the tag to be scan and incert content (e.g. "WikiBreeze"),
+	//which be automatically converted to <!-- WikiBreeze {{name}} start-->
+	"incert tag":"WikiBreeze",
 	
-	//file type to be scan (e.g. ".html")
+	//file type to be scan (e.g. [".html",....])
 	"file type":[".html",".vue"]
 }
