--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -4,12 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build-all": "run-p type-check build-only && go build -o .\\dist\\ -ldflags=\"-w -s\" .\\BackEnd\\serve.go",
-    "build-go": "go build -o .\\dist\\ -ldflags=\"-w -s\" .\\BackEnd\\serve.go",
-    "build-web": "run-p type-check build-only",
+    "build": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
-    "build-only": "vite build",
+    "build-only": "vite build  --outDir ../dist",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
