Back-end basically completed

--- a/BackEnd/defaultConfig/renderConfig.json
+++ b/BackEnd/defaultConfig/renderConfig.json
@@ -5,7 +5,7 @@
             //     "default": "table"
             // }
         },
-        "tag": "h1"
+        "tag": "p"
     },
     "table" : {
         "HTMLAttributes": {
