--- a/BackEnd/defaultConfig/renderConfig.json
+++ b/BackEnd/defaultConfig/renderConfig.json
@@ -17,5 +17,9 @@
             // }
         },
         "tag": "Tablegotool"
+    },
+    "otherConfigurations":{
+        "headingLevels": [1,2,3,4],
+        "citation": "true"
     }
 }
