--- a/BackEnd/defaultConfig/renderConfig.json
+++ b/BackEnd/defaultConfig/renderConfig.json
@@ -16,10 +16,12 @@
             //     "default": "table"
             // }
         },
-        "tag": "Tablegotool"
+        "tag": "table"
     },
     "otherConfigurations":{
         "headingLevels": [1,2,3,4],
-        "citation": "true"
+        "citation": "true",
+        "tablePro": "true",             //table with note
+        "tableMustContainNote": "true"  //table must contain note
     }
 }
