--- a/BackEnd/defaultConfig/config.json
+++ b/BackEnd/defaultConfig/config.json
@@ -3,7 +3,7 @@
 	"scanDirectory": "..\\",
 
 	// Directory to store the edited page (e.g. "D:\\github\\web\\src\\WikiData")
-	"storeDirectory": ".\\WikiData",
+	"storeDirectory": "..\\WikibreezeData\\WikiData",
 
 	//Port to be used (e.g. "8080" or "auto")
 	"port": "auto",
