--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -12,55 +12,55 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@jridgewell/sourcemap-codec": "^1.4.14",
-    "@tiptap/extension-bold": "^2.0.0-beta.209",
-    "@tiptap/extension-bullet-list": "^2.0.0-beta.209",
-    "@tiptap/extension-code": "^2.0.0-beta.209",
-    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.209",
-    "@tiptap/extension-hard-break": "^2.0.0-beta.209",
-    "@tiptap/extension-heading": "^2.0.0-beta.209",
-    "@tiptap/extension-history": "^2.0.0-beta.209",
-    "@tiptap/extension-image": "^2.0.0-beta.209",
-    "@tiptap/extension-italic": "^2.0.0-beta.209",
-    "@tiptap/extension-link": "^2.0.0-beta.209",
-    "@tiptap/extension-list-item": "^2.0.0-beta.209",
-    "@tiptap/extension-strike": "^2.0.0-beta.209",
-    "@tiptap/extension-subscript": "^2.0.0-beta.209",
-    "@tiptap/extension-superscript": "^2.0.0-beta.209",
-    "@tiptap/extension-table": "^2.0.0-beta.209",
-    "@tiptap/extension-table-cell": "^2.0.0-beta.209",
-    "@tiptap/extension-table-header": "^2.0.0-beta.209",
-    "@tiptap/extension-table-row": "^2.0.0-beta.209",
-    "@tiptap/extension-text-align": "^2.0.0-beta.209",
-    "@tiptap/extension-underline": "^2.0.0-beta.209",
-    "@tiptap/html": "^2.0.0-beta.209",
-    "@tiptap/starter-kit": "^2.0.0-beta.209",
-    "@tiptap/vue-3": "^2.0.0-beta.209",
-    "@vueuse/core": "^9.8.2",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@tiptap/extension-bold": "^2.0.3",
+    "@tiptap/extension-bullet-list": "^2.0.3",
+    "@tiptap/extension-code": "^2.0.3",
+    "@tiptap/extension-code-block-lowlight": "^2.0.3",
+    "@tiptap/extension-hard-break": "^2.0.3",
+    "@tiptap/extension-heading": "^2.0.3",
+    "@tiptap/extension-history": "^2.0.3",
+    "@tiptap/extension-image": "^2.0.3",
+    "@tiptap/extension-italic": "^2.0.3",
+    "@tiptap/extension-link": "^2.0.3",
+    "@tiptap/extension-list-item": "^2.0.3",
+    "@tiptap/extension-strike": "^2.0.3",
+    "@tiptap/extension-subscript": "^2.0.3",
+    "@tiptap/extension-superscript": "^2.0.3",
+    "@tiptap/extension-table": "^2.0.3",
+    "@tiptap/extension-table-cell": "^2.0.3",
+    "@tiptap/extension-table-header": "^2.0.3",
+    "@tiptap/extension-table-row": "^2.0.3",
+    "@tiptap/extension-text-align": "^2.0.3",
+    "@tiptap/extension-underline": "^2.0.3",
+    "@tiptap/html": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
+    "@tiptap/vue-3": "^2.0.3",
+    "@vueuse/core": "^10.1.0",
     "bulma": "^0.9.4",
-    "lowlight": "^2.8.0",
-    "sass": "^1.57.1",
-    "vue": "^3.2.45",
+    "lowlight": "^2.8.1",
+    "sass": "^1.62.1",
+    "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@types/jsdom": "^20.0.1",
-    "@types/node": "^18.11.12",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/test-utils": "^2.2.6",
-    "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "jsdom": "^20.0.3",
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "^18.16.1",
+    "@vitejs/plugin-vue": "^4.2.1",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.3.2",
+    "@vue/tsconfig": "^0.3.2",
+    "eslint": "^8.39.0",
+    "eslint-plugin-vue": "^9.11.0",
+    "jsdom": "^21.1.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "typescript": "~4.7.4",
-    "vite": "^4.0.0",
-    "vitest": "^0.25.6",
-    "vue-tsc": "^1.0.12"
+    "prettier": "^2.8.8",
+    "typescript": "~5.0.4",
+    "vite": "^4.3.3",
+    "vitest": "^0.30.1",
+    "vue-tsc": "^1.6.0"
   }
 }
