--- a/BackEnd/defaultConfig/renderConfig.json
+++ b/BackEnd/defaultConfig/renderConfig.json
@@ -22,6 +22,6 @@
         "headingLevels": [1,2,3,4],
         "citation": "true",
         "tablePro": "true",             //table with note
-        "tableMustContainNote": "true"  //table must contain note
+        "tableMustContainNote": "false"  //table must contain note
     }
 }
