--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
     "scripts": {
-        "install": "cd ./FrontEnd && npm install",
-        "build-backend": "cd ./BackEnd && go build -o ../Wikibreeze/",
-        "build-frontend": "cd ./FrontEnd && npm run build ",
-        "use-template": "copy .\\BackEnd\\testContent.json .\\Wikibreeze",
-        "build": "npm run build-backend && npm run build-frontend && npm run use-template"
+        "prepare": "node -v",
+        "cp:src": "rimraf ./Wikibreeze/src && ncp ./BackEnd/src ./Wikibreeze/src",
+        "build": "npm run build:backend && npm run build:frontend",
+        "build:backend": "cd BackEnd && go build -o ../Wikibreeze/ && npm run cp:src",
+        "build:frontend": "npm run cp:template && cd FrontEnd && npm run build",
+        "cp:template": "ncp ./BackEnd/testContent.json ./Wikibreeze",
+        "install": "cd FrontEnd && npm install"
+    },
+    "dependencies": {
+        "ncp": "^2.0.0",
+        "rimraf": "^5.0.0"
     }
 }
