--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -36,31 +36,32 @@
     "@tiptap/html": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
     "@tiptap/vue-3": "^2.0.3",
-    "@vueuse/core": "^10.1.0",
+    "@vueuse/core": "^10.1.2",
     "bulma": "^0.9.4",
-    "lowlight": "^2.8.1",
+    "lowlight": "^2.9.0",
     "sass": "^1.62.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
+    "@tsconfig/node18": "^2.0.0",
     "@types/jsdom": "^21.1.1",
-    "@types/node": "^18.16.1",
+    "@types/node": "^20.1.1",
     "@vitejs/plugin-vue": "^4.2.1",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.3.2",
-    "eslint": "^8.39.0",
-    "eslint-plugin-vue": "^9.11.0",
-    "jsdom": "^21.1.1",
+    "eslint": "^8.40.0",
+    "eslint-plugin-vue": "^9.11.1",
+    "jsdom": "^22.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "typescript": "~5.0.4",
-    "vite": "^4.3.3",
-    "vitest": "^0.30.1",
-    "vue-tsc": "^1.6.0"
+    "vite": "^4.3.5",
+    "vitest": "^0.31.0",
+    "vue-tsc": "^1.6.4"
   }
 }
