--- a/FrontEnd/tsconfig.app.json
+++ b/FrontEnd/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
-  // "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue","src/routes.json","src/*"],
+  "extends": "@vue/tsconfig/tsconfig.dom.json",
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
