rename and avoid same name conflict

--- a/BackEnd/src/config.json
+++ b/BackEnd/src/config.json
@@ -1,6 +1,6 @@
 {
-	// Directory containing the page to be modified (e.g. "D:\\github\\web\\src\\pages")
-	"scanDirectory": "..\\",
+	// Directory containing the page to be modified (e.g. "D:/github/web/src/pages")
+	"scanDirectory": "../",
 
 	//Port to be used (e.g. "8080" or "auto")
 	"port": "auto",
