--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -5,13 +5,13 @@ on:
       - main
 jobs:
   build:
-    strategy:  
-      matrix: 
+    strategy:
+      matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Node.js 
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '16'
@@ -19,48 +19,35 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+      - name: Archive project
+        run: |
+          mkdir ./WikiBreeze-${{ matrix.os }}
+          mv ./* ./WikiBreeze-${{ matrix.os }}  
       - name: Create artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: WikiBreeze-${{ matrix.os }}-build
-          path: ./WikiBreeze
-  release:         
-    needs: build          
+          path: ./WikiBreeze-${{ matrix.os }}
+  release:
+    needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2    
-      # Download macOS artifact  
-      - name: Download macOS built binaries
-        if: contains(needs.build.outputs.os, 'macos-latest') 
-        uses: actions/download-artifact@v2
-        with: 
-          name: WikiBreeze-macos-latest-build
-          path: ./
-      # Upload macOS release asset  
-      - name: Upload macOS Release Asset
-        if: contains(needs.build.outputs.os, 'macos-latest')
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  
-          asset_path: ./WikiBreeze.zip  
-          asset_name: WikiBreeze-macOS.zip  
-          asset_content_type: application/zip
+      - uses: actions/checkout@v3
       # Download Windows artifact  
-      - name: Download Windows built binaries
-        if: contains(needs.build.outputs.os, 'windows-latest') 
+      - name: Download Windows built artifact 
+        if: contains(needs.build.outputs.os, 'windows-latest')
         uses: actions/download-artifact@v2
         with: 
           name: WikiBreeze-windows-latest-build
-          path: ./
       # Upload Windows release asset  
       - name: Upload Windows Release Asset
         if: contains(needs.build.outputs.os, 'windows-latest')
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}  
-          asset_path: ./WikiBreeze.zip  
+          asset_path: ./WikiBreeze-windows-latest-build/WikiBreeze.zip  
           asset_name: WikiBreeze-Windows.zip  
-          asset_content_type: application/zip
+          asset_content_type: application/zip 
       # Download Linux artifact
       - name: Download Linux built binaries
         if: contains(needs.build.outputs.os, 'ubuntu-latest') 
