--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -57,6 +57,7 @@
     "eslint": "^8.40.0",
     "eslint-plugin-vue": "^9.11.1",
     "jsdom": "^22.0.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
