--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -4,8 +4,7 @@ on:
     branches:
       - main
     paths-ignore:  
-      - '**.md'  
-      - '*.yml'
+      - '**.md/*.yml'
 jobs:
   build:
     strategy:
