--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,70 +1,67 @@
-name: Build and Release WikiBreeze 
-on: 
+name: Build and Release WikiBreeze
+on:
   push:
     branches:
       - main
-    paths-ignore:  
+    paths-ignore:
       - '**.md/*.yml'
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v3 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '16'
       - name: Install dependencies
-        run: npm install
-      - name: Build
-        run: npm run build
-      - name: Archive project
-        run: |
-          mkdir ./WikiBreeze-${{ matrix.os }}
-          mv ./Wikibreeze ./WikiBreeze-${{ matrix.os }}/
-          cd ./WikiBreeze-${{ matrix.os }}
-          tar -czf ../WikiBreeze.tar.gz *
+        run: npm install 
+      - name: Build for Linux         
+        run: env GOOS=linux GOARCH=amd64 npm run build         
+      - name: Build for macOS         
+        run: env GOOS=darwin GOARCH=amd64 npm run build    
+      - name: Build for Windows         
+        run: env GOOS=windows GOARCH=amd64 npm run build       
       - name: Create artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: WikiBreeze-${{ matrix.os }}-build
-          path: ./WikiBreeze-${{ matrix.os }}
+          name: WikiBreeze-linux-build
+          path: ./dist/wikiBreeze-linux
+      - name: Create artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: WikiBreeze-macos-build
+          path: ./dist/wikiBreeze-darwin         
+      - name: Create artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: WikiBreeze-windows-build
+          path: ./dist/wikiBreeze-windows.exe  
   release:
     needs: build
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      # Download Windows artifact  
-      - name: Download Windows built artifact 
-        if: contains(needs.build.outputs.os, 'windows-latest')
-        uses: actions/download-artifact@v2
-        with: 
-          name: WikiBreeze-windows-latest-build
-      # Upload Windows release asset  
-      - name: Upload Windows Release Asset
-        if: contains(needs.build.outputs.os, 'windows-latest')
+    steps:   
+      # Upload Linux release asset 
+      - name: Upload Linux Release Asset     
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  
-          asset_path: ./WikiBreeze-windows-latest-build/WikiBreeze.zip  
-          asset_name: WikiBreeze-Windows.zip  
-          asset_content_type: application/zip 
-      # Download Linux artifact
-      - name: Download Linux built binaries
-        if: contains(needs.build.outputs.os, 'ubuntu-latest') 
-        uses: actions/download-artifact@v2
-        with: 
-          name: WikiBreeze-ubuntu-latest-build
-          path: ./
-      # Upload Linux release asset  
-      - name: Upload Linux Release Asset
-        if: contains(needs.build.outputs.os, 'ubuntu-latest')
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./WikiBreeze-linux-build/wikiBreeze-linux
+          asset_name: WikiBreeze-Linux.zip
+          asset_content_type: application/zip         
+      # Upload MacOS release asset 
+      - name: Upload MacOS Release Asset     
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  
-          asset_path: ./WikiBreeze-ubuntu-latest-build/WikiBreeze.tar.gz     
-          asset_name: WikiBreeze-Linux.zip  
-          asset_content_type: application/gzip 
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./WikiBreeze-macos-build/wikiBreeze-darwin
+          asset_name: WikiBreeze-MacOS.zip
+          asset_content_type: application/zip         
+      # Upload Windows release asset 
+      - name: Upload Windows Release Asset     
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./WikiBreeze-windows-build/wikiBreeze-windows.exe
+          asset_name: WikiBreeze-Windows.exe
+          asset_content_type: application/x-msdownload
