--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
+    "name": "wikibreeze",
+    "version": "0.9.1",
     "scripts": {
         "prepare": "node -v",
         "build": "rimraf ./Wikibreeze && npm run build:backend && npm run build:frontend",
-        
-        "cp:src": "rimraf ./Wikibreeze/src && ncp ./BackEnd/src ./Wikibreeze/src",
+        "cp:src": "ncp ./BackEnd/src ./Wikibreeze/src && ncp ./BackEnd/testContent.json ./Wikibreeze/testContent.json",
         "build:backend": "cd BackEnd && go build -ldflags \"-s -w\" -o ../Wikibreeze/ && npm run cp:src",
-
-        "cp:template": "ncp ./BackEnd/testContent.json ./Wikibreeze/testContent.json && ncp ./Template/template.css ./Wikibreeze/src/template.css",
+        "cp:template": "mkdirp  Wikibreeze/src && ncp ./Template/template.css ./Wikibreeze/src/template.css",
         "build:frontend": "cd FrontEnd && npm run build && cd ../ && npm run cp:template",
         "install": "cd FrontEnd && npm install && cd ../BackEnd && go install"
     },
     "dependencies": {
+        "mkdirp": "^3.0.1",
         "ncp": "^2.0.0",
         "rimraf": "^5.0.0"
     }
