--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -29,7 +29,9 @@ jobs:
         run: npm install 
         
       - name: Build frontend  
-        run: npm run build:frontend
+        run: |
+          npm run build:frontend
+          npm run build:backend
     
       - name: Build for linux         
         run: |
