--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build frontend  
         run: |
           npm run build:frontend
-          npm run build:backend
+          env GOOS=linux GOARCH=amd64 npm run build:backend
     
       - name: Build for linux         
         run: |
