--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -31,11 +31,10 @@ jobs:
       - name: Build frontend  
         run: |
           npm run build:frontend
-          env GOOS=linux GOARCH=amd64 npm run build:backend
     
       - name: Build for linux         
         run: |
-          env GOOS=linux GOARCH=amd64 npm run build:backend 
+          npm run build:backend 
           mkdir ./WikiBreeze-linux
           cp ./Wikibreeze ./WikiBreeze-linux
           rm ./Wikibreeze/WikiBreeze
