--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -28,12 +28,13 @@ jobs:
       - name: Install dependencies
         run: npm install 
         
-      - name: Build frontend  
-        run: |
-          npm run build:frontend
+      # - name: Build frontend  
+      #   run: |
+      #     npm run build:frontend
     
       - name: Build for linux         
         run: |
+          npm run build:frontend
           env GOOS=linux GOARCH=amd64 npm run build:backend 
           mkdir ./WikiBreeze-linux
           cp ./Wikibreeze ./WikiBreeze-linux
