--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build for linux         
         run: |
           npm run build:frontend
-          env GOOS=linux GOARCH=amd64 npm run build:backend 
+          npm run build:backend 
           mkdir ./WikiBreeze-linux
           cp ./Wikibreeze ./WikiBreeze-linux
           rm ./Wikibreeze/WikiBreeze
