--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           env GOOS=darwin GOARCH=amd64 npm run build:backend
           mkdir ./WikiBreeze-macos
-          cp ./Wikibreeze ./WikiBreeze-macos
+          cp -r ./Wikibreeze ./WikiBreeze-macos
           rm ./Wikibreeze/WikiBreeze
           cd ./WikiBreeze-macos
           zip -r WikiBreeze-macos-${{ steps.get_latest_tag.outputs.tag_name }}.zip Wikibreeze
@@ -54,7 +54,7 @@ jobs:
         run: |
           env GOOS=windows GOARCH=amd64 npm run build:backend
           mkdir ./WikiBreeze-windows
-          cp ./Wikibreeze ./WikiBreeze-windows
+          cp -r ./Wikibreeze ./WikiBreeze-windows
           rm ./Wikibreeze/WikiBreeze
           cd ./WikiBreeze-windows
           zip -r WikiBreeze-windows-${{ steps.get_latest_tag.outputs.tag_name }}.zip Wikibreeze
