--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -13,10 +13,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3 
       
-      - name: Get latest tag   
-        uses: actions-ecosystem/action-get-latest-tag@v1
+      - uses: actions-ecosystem/action-release-label@v1
+        id: release-label
+        if: ${{ github.event.pull_request.merged == true }}
+
+      - uses: actions-ecosystem/action-get-latest-tag@v1
         id: get-latest-tag
         if: ${{ steps.release-label.outputs.level != null }}
+
+      - name: Echo latest tag 
+        run: echo ${{ steps.get-latest-tag.outputs.tag }} 
       
       - name: Set up Node.js
         uses: actions/setup-node@v3
